# permpy

./: .gitignore  .isort.cfg  .readthedocs.yml  CHANGELOG.md  LICENSE  Overview.ipynb  PyYAML-6.0-cp311-cp311-macosx_11_0_arm64.whl  README.ipynb  README.md  __init__.py  avclass.py  avclasswithbasis.py  avoidencegrid.py  ex.tex  geometricgridclass.py  make-lite  make-test  misc.py  mypy.ini  notes.txt  pegpermset.py  permclass.py  permset.py  permtools.py  permutation.py  permutations.py  pyproject.toml  setup.py  setup_old.py  test.py  to_fix.txt  todo.txt  tox.ini  vector.py
.github/workflows/: ci-cd.yml
.ipynb_checkpoints/: README-checkpoint.ipynb
InsertionEncoding/: __init__.py  configuration.py  insertionscheme.py
RestrictedContainer/: __init__.py
docs/: Makefile  conf.py  index.md  requirements.txt
docs/doctrees/: changelog.doctree  environment.pickle  index.doctree
docs/doctrees/autoapi/: index.doctree
docs/html/: .buildinfo  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/autoapi/: index.html
permpy/: .gitignore  README.md  __init__.py  __main__.py  avclass.py  def inf_P_to_l(P,l):  geometricgridclass.py  misc.py  mperm.py  onefile.py  pegpermset.py  pegpermutation.py  permclass.py  permmisc.py  permset.py  permstats.py  permutation.py  permutation_new.py  propertyclass.py  staircase.py  statistics.py  utils.py  vector.py  vectorset.py
permpy/InsertionEncoding/: __init__.py  configuration.py  insertionscheme.py
permpy/RestrictedContainer/: __init__.py  restricted_container.py
permpy/deprecated/: permclassdeprecated.py  permdeprecated.py  permsetdeprecated.py
permpy/misc/: length6-WhatAreThese.py  mains.py  propogation.py  propogation_2.py  tree.py
src/permpy/: __init__.py  avclass.py  geometricgridclass.py  misc.py  permclass.py  permmisc.py  permset.py  permstats.py  permutation.py  propertyclass.py  staircase.py  statistics.py  test_geometricgridclass.py  utils.py  vector.py
src/permpy/InsertionEncoding/: configuration.py  insertionscheme.py
src/permpy/PegPermutations/: __init__.py  pegpermset.py  pegpermutation.py  vector.py  vectorset.py
src/permpy/RestrictedContainer/: __init__.py  restricted_container.py
tests/: test_avclass.py  test_doc.py  test_permclass.py  test_permmisc.py  test_permset.py  test_permstats.py  test_permutation.py  test_propertyclass.py  test_staircase.py  test_utils.py
(+93 files in other folders)
