[tool.isort]
profile = "black"

[tool.poetry]
name = "permpy"
version = "0.2.2"
description = "A package for analyzing permutation patterns."
authors = ["Michael Engen", "Cheyne Homberger", "Jay Pantone"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
python-semantic-release = "^7.29.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = ["poetry.core.masonry.api"]
