[tool.isort]
profile = "black"

[tool.poetry]
name = "permpy"
version = "0.2.1"
description = "A package for analyzing permutation patterns."
authors = ["Michael Engen", "Cheyne Homberger", "Jay Pantone"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
python-semantic-release = "^7.29.6"
myst-nb = {version = "^0.16.0", python = "^3.9"}
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = ["poetry.core.masonry.api"]
